//  protoc rpc.proto --go_out=plugins=grpc:.

syntax = "proto3";

package protos;

// The service definition.
service Samaritan {
  // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Apple Push
    rpc ApplePush (PushRequest) returns (PushReply) {}

  // Mail send
    rpc SendMail (MailRequest) returns (MailResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
    int32 age = 2;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
    int32 age = 2;
}

// Push request, containing push message and repeated device token
message PushRequest{
    string message = 1;
    repeated string deviceToken = 2;
    map<string, string> extraInfo = 3;
}

// Push response, containing numbers of successful push and failed token list
message PushReply{
    int32 count = 1;
    repeated string deviceToken = 2;
}

// Send mail request
message MailRequest{
    string to = 2;
    string subject = 3;
    string body = 4;
}

// Send mail response{
message MailResponse{
}

